bindata/assets/routes/console-route.yaml
# Default 'console' route manifest.
# The 'console' route will be pointing to the 'console' service.
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: console
  namespace: openshift-console
  annotations:
    haproxy.router.openshift.io/timeout: 5m
    haproxy.router.openshift.io/rate-limit-connections: "true"
    haproxy.router.openshift.io/rate-limit-connections.concurrent-tcp: 3
    haproxy.router.openshift.io/rate-limit-connections.rate-http: 3
    haproxy.router.openshift.io/rate-limit-connections.rate-tcp: 3
  labels:
    app: console
spec:
  to:
    kind: Service
    name: console
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
