bindata/assets/routes/downloads-route.yaml
# Default 'downloads' route manifest.
# The 'downloads' route will be pointing to the 'downloads' service. 
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/rate-limit-connections: "true"
    haproxy.router.openshift.io/rate-limit-connections.concurrent-tcp: 3
    haproxy.router.openshift.io/rate-limit-connections.rate-http: 3
    haproxy.router.openshift.io/rate-limit-connections.rate-tcp: 3
  namespace: openshift-console
  name: downloads
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: http
  to:
    kind: Service
    name: downloads
    weight: 100
  wildcardPolicy: None
